--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div> 
       <div class="row">
         <div class="col-lg-6 col-md-12">
-          <h1 class="tagline"><strong>DISCUSSION. <br>DELIBERATE.<br>DEBATE.</strong></h1>
+          <h1 class="tagline"><strong>DEBATE.<br>DISCUSSION.<br>DIPLOMACY.</strong></h1>
         </div>
         
         <div class="col-lg-6 col-md-12">
